try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -70,6 +70,7 @@
 
 .fun {
     width: 100%;
+    height: 100%;
     background-color: black;
 }
 
